--- a/src/styles/animation.scss
+++ b/src/styles/animation.scss
@@ -1,9 +1,12 @@
-@keyframes fadeIn {
-  from { left: -100%; }
-  to { left: 0; }
+@keyframes fade {
+  0% {
+    transform-origin: 0 0;
+    transform: scaleY(1);
+    opacity: 1;
+  }
+  100% {
+    transform-origin: 0 0;
+    transform: scaleY(0);
+    opacity: 0;
+  }
 }
-@-webkit-keyframes fadeIn {
-  from { left: -100%; }
-  to { left: 0; }
-}
-
