--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -11,6 +11,7 @@
   height: 3rem;
   margin-top: -2rem;
   margin-left: 4.5rem;
+  -webkit-appearance: none;
 }
 .btn-able {
   background: url("../assets/images/confirm-btn.png") no-repeat;
