--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -47,6 +47,10 @@
   background: url("../assets/images/grandpa.png") no-repeat;
   background-size: 100%;
 }
+.dog {
+  background: url("../assets/images/dog.png") no-repeat;
+  background-size: 100%;
+}
 .fadeInLeft {
   animation-delay: 1.5s;
 }
